--- a/public/components/soldier/soldiers.html
+++ b/public/components/soldier/soldiers.html
@@ -1,8 +1,6 @@
-<div class="row">
-    <div class="col-md-4" ng-repeat="soldier in soldiers">
-        <div ng-repeat="sub in soldier.subordinates">
-            <h1>{{sub.firstName}} {{sub.lastName}}</h1>
-            <h3>{{sub.tasks}}</h3>
-        </div>
+<div class="row" ng-repeat="sub in subordinates">
+    <div class="col-md-4">
+        <h1>{{sub.firstName}} {{sub.lastName}}</h1>
+        <h3>{{sub.tasks}}</h3>
     </div>
 </div>
