--- a/public/components/home/home.html
+++ b/public/components/home/home.html
@@ -1,6 +1,6 @@
 <div class="jumbotron" id="jumbotron">
     <div class="container text-center">
-        <h1>Welcome to the Soldier App</h1>
+        <h1>Welcome to the Soldier App.</h1>
         <h2>Hooah!</h2>
     </div>
 </div>
